workspace = { members = ["examples/mytest"] }
[package]
name = "tracing-chrometrace"
version = "0.1.19"
edition = "2018"

authors = ["Youseok Yang <ileixe@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A Layer for tracing-subscriber that outputs Chrome-style traces."
documentation = "https://docs.rs/tracing-chrometrace"
keywords = ["profiling", "tracing", "flamegraph", "subscriber"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ileixe/tracing-chrometrace"

[dependencies]
crossbeam = "0.8.3"
crossbeam-queue = "0.3.5"
derivative = "2.2.0"
derive_builder = "0.11.1"
itertools = "0.10.3"
kanal = "0.1.0-pre8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "std", "env-filter", "valuable"] }
valuable = "0.1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
crossbeam-queue = "0.3.5"
rusty-fork = "0.3.0"
temp-file = "0.1.7"
tracing-appender = "0.2.2"
tracing-chrome = "0.5.0"

[[bench]]
name = "benchmark"
harness = false

